Rename to hygen-next

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hygen",
+  "name": "hygen-next",
   "version": "6.2.11",
   "description": "The scalable code generator that saves you time.",
   "keywords": [
