--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hygen-next",
+  "name": "hygen-neo",
   "version": "6.3.0",
   "description": "The scalable code generator that saves you time.",
   "keywords": [
